--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,43 @@
 /* Основной цвет текста #212121 */
 /* Вторичный цвет текста #757575 */
+/* Основной цвет фона #E5E5E5 */
+/* Вторичный цвет фона #F5F4FA, #2F303A */
 /* Белый #FFFFFF */
 /* Акценты #2196F3 */
+body {
+  background-color: #e5e5e5;
+  color: #212121;
+}
+ul {
+  list-style: none;
+}
+/* Шапка сайта */
+.logo {
+  color: #212121;
+  text-decoration: none;
+}
+.logo:hover {
+  color: #2196f3;
+  text-decoration: underline;
+}
+.blue-logo {
+  color: #2196f3;
+}
+.site-nav .link {
+  color: #212121;
+  text-decoration: none;
+}
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: #2196f3;
+  text-decoration: underline;
+}
+.contact-list .link {
+  color: #757575;
+  text-decoration: none;
+}
+.contact-list .link:hover,
+.contact-list .link:focus {
+  color: #2196f3;
+  text-decoration: underline;
+}
