--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 /* Основной цвет текста #212121 */
 /* Вторичный цвет текста #757575 */
 /* Основной цвет фона #E5E5E5 */
-/* Вторичный цвет фона #F5F4FA, #2F303A */
-/* Белый #FFFFFF */
+/* Вторичный цвет фона #2F303A */
 /* Акценты #2196F3 */
 body {
   background-color: #e5e5e5;
