--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,9 @@
 /* Акценты #2196F3 */
 
 body {
-  background-color: #e5e5e5;
   color: #212121;
+  background-color: #e5e5e5;
+  font-family: Roboto, sans-serif;
 }
 ul {
   list-style: none;
@@ -15,32 +16,43 @@ ul {
 .logo {
   color: #212121;
   text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-size: 26px;
+  line-height: 1.2;
 }
-.logo:hover,
+/* .logo:hover,
 .logo:focus {
   color: #2196f3;
-  text-decoration: underline;
-}
+} */
 .blue-logo {
   color: #2196f3;
 }
 .site-nav .link {
   color: #212121;
   text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: #2196f3;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .contact-list .link {
   color: #757575;
   text-decoration: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
 }
 .contact-list .link:hover,
 .contact-list .link:focus {
   color: #2196f3;
-  text-decoration: underline;
+  text-decoration: none;
 }
 /* Главный блок */
 /* Герой */
@@ -51,6 +63,12 @@ ul {
 }
 .hero-title {
   color: #ffffff;
+  font-weight: 900px;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 /* Особенности */
 .section {
@@ -61,9 +79,21 @@ ul {
 }
 .peculiarities-list .title {
   color: #212121;
+  font-weight: 700px;
+  font-size: 14px;
+  line-height: 1.14;
 }
 .peculiarities-list .paragraphly {
   color: #757575;
+  font-weight: 400px;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.section-title {
+  font-weight: 700px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 /* Подвал сайта */
 .footer {
@@ -74,6 +104,10 @@ ul {
 }
 .footer .logo {
   color: #ffffff;
+}
+.logo:hover,
+.logo:focus {
+  color: #2196f3;
 }
 .address-list .link {
   color: rgba(255, 255, 255, 0.6);
