--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 body {
   color: var(--main-text-color);
-  background-color: #e5e5e5;
+  background-color: var(--main-bg-color);
   font-family: Roboto, sans-serif;
 }
 ul {
@@ -47,7 +47,7 @@ ul {
   text-decoration: none;
 }
 .contact-list .link {
-  color: #757575;
+  color: var(--secondary-text-color);
   text-decoration: none;
   font-family: Roboto;
   font-style: normal;
@@ -90,7 +90,7 @@ ul {
   line-height: 1.14;
 }
 .peculiarities-list .paragraphly {
-  color: #757575;
+  color: var(--secondary-text-color);
   font-weight: 400px;
   font-size: 14px;
   line-height: 1.7;
