--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,14 @@
 /* Основной цвет фона #E5E5E5 */
 /* Вторичный цвет фона #2F303A */
 /* Акценты #2196F3 */
+/* Белый #ffffff */
 :root {
   --main-text-color: #212121;
   --secondary-text-color: #757575;
   --main-bg-color: #e5e5e5;
   --secondary-bg-color: #2f303a;
   --accent-color: #2196f3;
+  --white: #ffffff;
 }
 body {
   color: var(--main-text-color);
@@ -18,7 +20,18 @@ body {
 ul {
   list-style: none;
 }
+ul li a {
+  color: inherit;
+  text-decoration: none;
+}
 /* Шапка сайта */
+.header {
+  /* width: 1600px;
+  height: 80px;
+  left: 0px;
+  top: 0px;
+  background: var(--white); */
+}
 .logo {
   color: var(--main-text-color);
   text-decoration: none;
@@ -28,10 +41,10 @@ ul {
 }
 /* .logo:hover,
 .logo:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 } */
 .blue-logo {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .site-nav .link {
   color: var(--main-text-color);
@@ -43,7 +56,7 @@ ul {
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
   text-decoration: none;
 }
 .contact-list .link {
@@ -57,24 +70,41 @@ ul {
 }
 .contact-list .link:hover,
 .contact-list .link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
   text-decoration: none;
 }
 /* Главный блок */
-/* Герой */
 .hero {
-  background-color: #2f303a;
+  background-color: var(--secondary-bg-color);
   width: 1600px;
   height: 600px;
 }
 .hero-title {
-  color: #ffffff;
-  font-weight: 900px;
+  color: var(--white);
+  font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+.hero-button {
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
 }
 /* Особенности */
 .section {
@@ -101,19 +131,22 @@ ul {
   line-height: 1.17;
   text-align: center;
 }
+.section-portfolio .title {
+  display: none;
+}
 /* Подвал сайта */
 .footer {
-  color: #ffffff;
-  background-color: #2f303a;
+  color: var(--white);
+  background-color: var(--secondary-bg-color);
   width: 1600px;
   height: 252px;
 }
 .footer .logo {
-  color: #ffffff;
+  color: var(--white);
 }
 .logo:hover,
 .logo:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .address-list .link {
   color: rgba(255, 255, 255, 0.6);
@@ -121,6 +154,6 @@ ul {
 }
 .address-list .link:hover,
 .address-list .link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
   text-decoration: underline;
 }
