--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,10 @@ ul li a {
   font-size: 26px;
   line-height: 1.2;
 }
-/* .logo:hover,
+.logo:hover,
 .logo:focus {
   color: var(--accent-color);
-} */
+}
 .blue-logo {
   color: var(--accent-color);
 }
