--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,14 @@
 /* Вторичный цвет фона #2F303A */
 /* Акценты #2196F3 */
 /* Белый #ffffff */
+/* Цвет фона кнопки #F5F4FA */
 :root {
   --main-text-color: #212121;
   --secondary-text-color: #757575;
   --main-bg-color: #e5e5e5;
   --secondary-bg-color: #2f303a;
   --accent-color: #2196f3;
+  --btn-bg-color: #f5f4fa;
   --white: #ffffff;
 }
 body {
@@ -23,6 +25,7 @@ ul {
 ul li a {
   color: inherit;
   text-decoration: none;
+  font-style: normal;
 }
 /* Шапка сайта */
 /* .header {
@@ -58,6 +61,9 @@ ul li a {
 .site-nav .link:focus {
   color: var(--accent-color);
   text-decoration: none;
+}
+.site-nav .link.current {
+  color: var(--accent-color);
 }
 .contact-list .link {
   color: var(--secondary-text-color);
@@ -134,6 +140,30 @@ ul li a {
 .section-portfolio .title {
   display: none;
 }
+.btn {
+  background-color: var(--btn-bg-color);
+  font-size: 16px;
+  font-weight: 500px;
+  line-height: 1.62;
+  border-radius: 4px;
+}
+.btn:hover,
+.btn:focus {
+  color: var(--white);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.project-list .project-title {
+  font-weight: 700px;
+  font-size: 18px;
+  line-height: 2;
+}
+.project-list .project-type {
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--secondary-text-color);
+}
 /* Подвал сайта */
 .footer {
   color: var(--white);
@@ -147,6 +177,11 @@ ul li a {
 .logo:hover,
 .logo:focus {
   color: var(--accent-color);
+}
+.address-list {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 .address-list .link {
   color: rgba(255, 255, 255, 0.6);
