--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ ul li a {
 .contact-list .link {
   color: var(--secondary-text-color);
   text-decoration: none;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -141,6 +141,7 @@ ul li a {
 }
 .btn {
   background-color: var(--btn-bg-color);
+  font-family: roboto;
   font-size: 16px;
   font-weight: 500px;
   line-height: 1.62;
