--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ ul li a {
   color: var(--main-text-color);
   text-decoration: none;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 500px;
   font-size: 14px;
   line-height: 1.14;
 }
@@ -68,9 +68,9 @@ ul li a {
 .contact-list .link {
   color: var(--secondary-text-color);
   text-decoration: none;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 500px;
   font-size: 14px;
   line-height: 1.14;
 }
@@ -141,7 +141,7 @@ ul li a {
 }
 .btn {
   background-color: var(--btn-bg-color);
-  font-family: roboto;
+  font-family: Roboto, sans-serif;
   font-size: 16px;
   font-weight: 500px;
   line-height: 1.62;
